# OpenJPHNG

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh
benchmarks/: CMakeLists.txt  wavelet_benchmark.cc
include/openjph/: coded_lists.h  common.h  infile_base.h  line_buf.h  mem_elastic_allocator.h  mem_fixed_allocator.h  ojph_arch.h  swap_bytes.h
include/openjph-algo/: common.h  infile_base.h  lifting_step.h  line_buf.h  openjph-algo-wavelet.h  openjph-algo.h  param_atk.h
include/openjph-algo/wavelet/generic/: forward-reversible.h
include/openjph/coding/: block_encoder.h
include/openjph/wavelet/: lifting_step.h  param_atk.h  reversible_forward_transform.h  reversible_inverse_transform.h  reversible_lifting_step.h  wavelet.h
include/openjph/wavelet/general/: forward-reversible.h  reversible-forward-transform.h  reversible_forward_transform.h
src/: CMakeLists.txt
src/openjph/: CMakeLists.txt  line_buf.cc  message.cc
src/openjph-algo/: CMakeLists.txt
src/openjph-algo/wavelet/: CMakeLists.txt
src/openjph-algo/wavelet/generic/: CMakeLists.txt  forward-reversible.cpp
src/openjph/wavelet/: CMakeLists.txt  param_atk.cc
src/openjph/wavelet/avx512/: CMakeLists.txt  reversible_forward_vertical_step.cc  reversible_forward_vertical_step.h  reversible_vertical_step_original.cc  reversible_vertical_step_original.h
src/openjph/wavelet/general/: CMakeLists.txt  forward-reversible.cpp  reversible-forward-transform.cpp  reversible_forward_horizontal_t.h  reversible_forward_transform.cc  reversible_forward_vertical_step_t.h  reversible_horizontal_ana.cc  reversible_horizontal_ana.h  reversible_horizontal_ana_original.cc  reversible_horizontal_ana_original.h  reversible_vertical_step.cc  reversible_vertical_step.h  reversible_vertical_step_original.cc  reversible_vertical_step_original.h  reversible_vertical_step_t.h
src/openjph/wavelet/neon/: CMakeLists.txt  reversible_forward_vertical_step.cc  reversible_forward_vertical_step.h
test/: CMakeLists.txt
test/openjph-algo/: CMakeLists.txt
tests/: CMakeLists.txt
tests/openjph/: CMakeLists.txt  line_buf_unittest.cc  mem_fixed_allocator_unittest.cc
tests/openjph/wavelet/: CMakeLists.txt
tests/openjph/wavelet/general/: CMakeLists.txt  forward-reversible_test.cpp  reversible-forward-transform_unittest.cpp  reversible_forward_horizontal_t_unittest.cc  reversible_forward_transform_unittest.cc  reversible_vertical_step_t_unittest.cc
tests/openjph/wavelet/neon/: CMakeLists.txt  reversible_vertical_step_unittest.cc
